--- a/includes/style1.css
+++ b/includes/style1.css
@@ -16,7 +16,7 @@ heading{
 .logo {
 	width:100%;
 	height:37px;
-	background: url(../images/Logo.svg) center no-repeat ;
+	background: url(../images/Title.svg) center no-repeat ;
 	margin: auto;
 	padding: 0;
 }
